# llm-feature-gen

./: CHANGELOG.md  MANIFEST.in  README.md  SUPPORT.md  mkdocs.yml  pyproject.toml  test.ipynb  tutorial.ipynb
.github/workflows/: docs.yml  tests.yml
discover_tabular/: test.csv
docs/: index.md  install.md  outputs-schema.md  provider-configuration.md  quickstart.md  support.md
docs/api/: discover.md  generate.md  providers.md  utils.md
examples/: README.md  text_to_tabular_pipeline.py
examples/data/text_to_tabular/discovery/: sample_2_invoice_request.txt  sample_3_checkout_outage.txt  sample_4_admin_lockout.txt
examples/data/text_to_tabular/tickets/routine/: password_reset_status.txt  return_window.txt  tracking_update.txt
examples/data/text_to_tabular/tickets/urgent/: duplicate_charge_deadline.txt  warehouse_scan_failure.txt
examples/expected/text_to_tabular_pipeline/: all_feature_values.csv  classifier_predictions.csv  classifier_report.json  discovered_text_features.json  routine_feature_values.csv  urgent_feature_values.csv
outputs/: advisory_texts_feature_values.csv  computer_feature_values.csv  discovered_tabular_features.json  formal_texts_feature_values.csv  hotpot_feature_values.csv  mobile_feature_values.csv  vase_feature_values.csv
src/LLM_feature_gen/: discover.py  generate.py
src/LLM_feature_gen/providers/: openai_provider.py
src/LLM_feature_gen/utils/: image.py  video.py
src/llm_feature_gen/: __init__.py  discover.py  generate.py
src/llm_feature_gen/prompts/: __init__.py  image_discovery_prompt.txt  image_generation_prompt.txt  text_discovery_prompt.txt  text_generation_prompt.txt
src/llm_feature_gen/providers/: __init__.py  local_provider.py  openai_provider.py
src/llm_feature_gen/utils/: __init__.py  image.py  text.py  video.py
src/tests/: test_discover_more.py  test_examples.py  test_providers.py
tabular/computer/: computer1.csv  computer2.csv  computer3.csv  computer4.csv  computer5.csv
tabular/mobile/: mobile1.csv  mobile2.csv  mobile3.csv  mobile4.csv  mobile5.csv
texts/advisory_texts/: text10.txt  text11.txt  text13.txt  text15.txt  text16.txt  text18.txt  text2.txt  text20.txt  text4.txt  text6.txt  text8.txt
texts/formal_texts/: text1.txt  text12.txt  text14.txt  text17.txt  text19.txt  text3.txt  text5.txt  text7.txt  text9.txt
