[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-feature-gen"
version = "0.1.12"
description = "Generate interpretable feature schemas and tabular exports from text, images, tabular data, and video with LLMs"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Julija Jeršova" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = { Homepage = "https://github.com/JuliaYershova/LLM-feature-gen", Documentation = "https://juliayershova.github.io/llm-feature-gen/", Repository = "https://github.com/JuliaYershova/LLM-feature-gen", Issues = "https://github.com/JuliaYershova/LLM-feature-gen/issues", CI = "https://github.com/JuliaYershova/LLM-feature-gen/actions", Coverage = "https://codecov.io/gh/JuliaYershova/LLM-feature-gen" }
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2",
  "numpy>=1.26",
  "Pillow>=10",
  "opencv-python>=4.8",
  "ffmpeg-python>=0.2",
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.29",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["src/tests"]
addopts = "--cov=llm_feature_gen --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["llm_feature_gen"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"llm_feature_gen" = ["prompts/*.txt"]

# Belt-and-suspenders: don't bundle any non-code files from these folders
[tool.setuptools.exclude-package-data]
"*" = [
  "discover_images/*",
  "discover_tabular/*",
  "discover_texts/*",
  "discover_videos/*",
  "images/*",
  "outputs/*",
  "tabular/*",
  "texts/*",
  "videos/*",
]
